Pantalla de productos completada

--- a/system_huellitas/views/admin/menu_productos.html
+++ b/system_huellitas/views/admin/menu_productos.html
@@ -34,14 +34,14 @@
                 <div class="col">
                     <img class="mb-4" src="../../resources/img/png/dog_products.png" width="300px">
                     <div>
-                        <a href="../../views/admin/scrud_productos_perros.html"
+                        <a onclick="navigateToPage('Perros')"
                             class="btn btn-red-color btn-lg text-light rounded-4 d-grid gap-2">Perros</a>
                     </div>
                 </div>
                 <div class="col">
                     <img class="mb-4" src="../../resources/img/png/cat_products.png" width="300px">
                     <div>
-                        <a href="../../views/admin/scrud_productos_gatos.html"
+                        <a onclick="navigateToPage('Gatos')"
                             class="btn btn-red-color btn-lg text-light rounded-4 d-grid gap-2">Gatos</a>
                     </div>
                 </div>
