Agregue un margen top a las pantallas y puse el menu en fixed top

--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -15,7 +15,7 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
 </head>
 
-<body>
+<body class="mt-5">
     <!-- Insertar nuestro navbar a esta pantalla usando js -->
     <header>
         <div id="navbar"></div>
