--- a/system_huellitas/views/admin/settings.html
+++ b/system_huellitas/views/admin/settings.html
@@ -18,7 +18,7 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
 </head>
 
-<body>
+<body class="mt-5">
     <!-- Encabezado de la página -->
     <header class="container_one">
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
