--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -95,7 +95,7 @@
                             <input type="hidden" id="id_pedido" name="id_pedido">
                             <div class="container border border-secondary-subtle p-4">
                                 <div class="mb-3">
-                                    <label for="idPermiso" class="form-label fw-semibold">Estado actual del
+                                    <label for="estado" class="form-label fw-semibold">Estado actual del
                                         pedido</label>
                                     <select class="form-select" id="estado" name="estado" required></select>
                                 </div>
