--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -110,80 +110,79 @@
                     </form>
                 </div>
             </div>
+        </div>
 
 
 
-
-            <!-- Modal para mostrar información detallada del pedido -->
-            <div class="modal" id="viewModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-xl">
-                    <div class="modal-content">
-                        <!-- Encabezado del modal -->
-                        <div class="modal-header bg-orange-color">
-                            <!-- Título del modal -->
-                            <div class="container text-center">
-                                <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Información
-                                    del
-                                    pedido
-                                </h1>
-                            </div>
-                            <!-- Botón para cerrar el modal -->
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
+        <!-- Modal para mostrar información detallada del pedido -->
+        <div class="modal" id="viewModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <!-- Encabezado del modal -->
+                    <div class="modal-header bg-orange-color">
+                        <!-- Título del modal -->
+                        <div class="container text-center">
+                            <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Información
+                                del
+                                pedido
+                            </h1>
                         </div>
-                        <!-- Cuerpo del modal -->
-                        <div class="modal-body mt-3">
-                            <div class="row">
-                                <input type="hidden" id="idPedidoView" name="idPedidoView">
-                                <div class="col-sm-12">
-                                    <ol class="list-group">
-                                        <!-- Elemento de la lista representando los productos -->
-                                    </ol>
-                                </div>
-                                <!-- Información adicional del pedido -->
-                                <div class="col-sm-12 col-md-6">
-                                    <!-- Etiqueta para el nombre -->
-                                    <label class="form-check-label custom-bold-label"
-                                        for="nombreCliente">Nombre</label>
-                                    <br>
-                                    <!-- Nombre del cliente -->
-                                    <label class="form-check-label" id="nombreCliente" name="nombreCliente"></label>
-                                </div>
-                                <!-- Más información adicional -->
+                        <!-- Botón para cerrar el modal -->
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <!-- Cuerpo del modal -->
+                    <div class="modal-body mt-3">
+                        <div class="row">
+                            <input type="hidden" id="idPedidoView" name="idPedidoView">
+                            <div class="col-sm-12">
+                                <ol class="list-group" id="tarjetas">
+                                    <!-- Elemento de la lista representando los productos -->
+                                </ol>
+                            </div>
+                            <!-- Información adicional del pedido -->
+                            <div class="col-sm-12 col-md-6">
+                                <!-- Etiqueta para el nombre -->
+                                <label class="form-check-label custom-bold-label" for="nombreCliente">Nombre</label>
                                 <br>
-                                <!-- Información de la dirección -->
-                                <div class="col-sm-12 col-md-6">
-                                    <label class="form-check-label custom-bold-label" for="direccion">Dirección</label>
-                                    <br>
-                                    <label class="form-check-label" id="direccion" name="direccion"></label>
-                                </div>
-                                <!-- Más información de la dirección -->
+                                <!-- Nombre del cliente -->
+                                <label class="form-check-label" id="nombreCliente" name="nombreCliente"></label>
+                            </div>
+                            <!-- Más información adicional -->
+                            <br>
+                            <!-- Información de la dirección -->
+                            <div class="col-sm-12 col-md-6">
+                                <label class="form-check-label custom-bold-label" for="direccion">Dirección</label>
+                                <br>
+                                <label class="form-check-label" id="direccion" name="direccion"></label>
+                            </div>
+                            <!-- Más información de la dirección -->
+                            <br>
+                            <!-- Estado del pedido -->
+                            <div class="col-sm-12 col-md-6">
+                                <label class="form-check-label custom-bold-label"
+                                    for="estestadoPedidoado">Estado</label>
                                 <br>
                                 <!-- Estado del pedido -->
-                                <div class="col-sm-12 col-md-6">
-                                    <label class="form-check-label custom-bold-label" for="estestadoPedidoado">Estado</label>
-                                    <br>
-                                    <!-- Estado del pedido -->
-                                    <label class="form-check-label" id="estadoPedido" name="estadoPedido"></label>
-                                </div>
-                                <!-- Total a pagar -->
+                                <label class="form-check-label" id="estadoPedido" name="estadoPedido"></label>
+                            </div>
+                            <!-- Total a pagar -->
+                            <br>
+                            <div class="col-sm-12 col-md-6">
+                                <label class="form-check-label custom-bold-label" for="totalAPagar">Total
+                                    a
+                                    pagar</label>
                                 <br>
-                                <div class="col-sm-12 col-md-6">
-                                    <label class="form-check-label custom-bold-label" for="totalAPagar">Total
-                                        a
-                                        pagar</label>
-                                    <br>
-                                    <!-- Monto total a pagar por el pedido -->
-                                    <label class="form-check-label" id="totalAPagar" name="totalAPagar"></label>
-                                </div>
+                                <!-- Monto total a pagar por el pedido -->
+                                <label class="form-check-label" id="totalAPagar" name="totalAPagar"></label>
                             </div>
                         </div>
-                        <!-- Pie del modal -->
-                        <div class="container text-center mb-3">
-                            <!-- Botón para salir del modal -->
-                            <button type="button" class="btn btn-orange-color text-white"
-                                data-bs-dismiss="modal">Salir</button>
-                        </div>
+                    </div>
+                    <!-- Pie del modal -->
+                    <div class="container text-center mb-3">
+                        <!-- Botón para salir del modal -->
+                        <button type="button" class="btn btn-orange-color text-white"
+                            data-bs-dismiss="modal">Salir</button>
                     </div>
                 </div>
             </div>
