Detalles en components
Acabe grrrr

--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -93,7 +93,7 @@
                         <div class="modal-body p-4">
                             <!-- ID'S -->
                             <input type="hidden" id="id_pedido" name="id_pedido">
-                            <div class="container border border-secondary-subtle p-4">
+                            <div class="container">
                                 <div class="mb-3">
                                     <label for="estado" class="form-label fw-semibold">Estado actual del
                                         pedido</label>
