--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -111,7 +111,7 @@
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Código</p>
                                     <input type="text" class="form-control" placeholder="#####" aria-label="codigo"
-                                        id="codigoCupon" name="codigoCupon" required>
+                                        id="codigoCupon" name="codigoCupon" maxlength="8" minlength="4" required>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
