--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -17,7 +17,7 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
 </head>
 
-<body class="mt-5">
+<body class="mt-5 mb-5">
     <header>
         <div id="navbar"></div>
         <div class="container p-2 mt-4">
