--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -40,8 +40,9 @@
             <div class="row align-items-center gy-4">
                 <!--Buscador-->
                 <div class="col-md-6 col-lg-6">
-                <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
-                     <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search" id="searchInput" name="search" placeholder="Buscar...">
+                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
+                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search"
+                        id="searchInput" name="search" placeholder="Buscar...">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <!-- Este texto solo se mostrara en pantallas pequeñas, el .d-none esconde elementos -->
@@ -112,7 +113,8 @@
                                     </div>
                                     <div class="col">
                                         <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden required>
+                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden
+                                            required>
                                         <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
                                         <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
                                             imagen</label>
@@ -201,7 +203,8 @@
                                 <div class="mb-3">
                                     <label for="idPermiso" class="form-label fw-semibold">Asignación de permiso</label>
                                     <select class="form-select" id="idPermiso" name="idPermiso" required></select>
-                                    <div class="form-text" id="basic-addon4">Elige el permiso que tendrá este usuario</div>
+                                    <div class="form-text" id="basic-addon4">Elige el permiso que tendrá este usuario
+                                    </div>
                                 </div>
                                 <div class="container text-center mb-2 mt-4">
                                     <button type="submit" class="btn btn-orange-color text-light me-3"
